--- a/mss-web-server/src/main/webapp/WEB-INF/views/error/404.vm
+++ b/mss-web-server/src/main/webapp/WEB-INF/views/error/404.vm
@@ -1,7 +1,41 @@
 
-	<script type="text/javascript">
-		$(function() {
-			$.messager.progress('close');
-		});
-	</script>
-	WEB-INF - 404
+<script type="text/javascript">
+	$(function() {
+		$.messager.progress('close');
+	});
+</script>
+
+<style type="text/css">
+body {
+	color: #333;
+	font-family: "Segoe UI", "Lucida Grande", Helvetica, Arial,
+		"Microsoft YaHei", FreeSans, Arimo, "Droid Sans",
+		"wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3",
+		FontAwesome, sans-serif;
+}
+
+h1 {
+	font-size: 48px;
+	font-weight: 400;
+	margin-bottom: 15px;
+	color:#fff;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+h2 {
+	font-size: 24px;
+	font-weight: 400;
+	margin-bottom: 15px;
+	color:#fff;
+	margin-left: auto;
+	margin-right: auto;
+}
+</style>
+
+<div title="" class="easyui-panel" data-options="fit:true,border:false" style="background-color: #7fbeed">
+	<div style="background: url('/static/image/404.png')  no-repeat 0 0 fixed;width: 100%;height: 100%">
+	     <h1>404 Error</h1>
+		 <h2>页面找不到了... ...</h2>
+	</div>
+</div>
