--- a/mss-web-server/src/main/webapp/WEB-INF/views/error/404.vm
+++ b/mss-web-server/src/main/webapp/WEB-INF/views/error/404.vm
@@ -17,7 +17,6 @@ body {
 h1 {
 	font-size: 48px;
 	font-weight: 400;
-	margin-bottom: 15px;
 	color:#fff;
 	margin-left: auto;
 	margin-right: auto;
@@ -26,7 +25,6 @@ h1 {
 h2 {
 	font-size: 24px;
 	font-weight: 400;
-	margin-bottom: 15px;
 	color:#fff;
 	margin-left: auto;
 	margin-right: auto;
@@ -34,7 +32,7 @@ h2 {
 </style>
 
 <div title="" class="easyui-panel" data-options="fit:true,border:false" style="background-color: #7fbeed">
-	<div style="background: url('/static/image/404.png')  no-repeat 0 0 fixed;width: 100%;height: 100%">
+	<div style="background: url('/static/image/404.png')  no-repeat 0 0 fixed; width: 100%; height: 100%;overflow: hidden;">
 	     <h1>404 Error</h1>
 		 <h2>页面找不到了... ...</h2>
 	</div>
